# trama

./: .env.example  .gitignore  CLAUDE.md  Makefile  PRIVACY.md  README.md  docker-compose.yml  trama-weave.glsl  trama.pen
backend/: pyproject.toml
backend/migrations/: 001_init_schema.sql  002_session.sql  003_document.sql  004_parse_attempt.sql  005_operations.sql  006_document_heic_mime.sql  007_operation_supplier.sql  008_node_cuit_optional.sql
backend/seeds/: network.json
backend/src/trama/: auth_routes.py  config.py  cuit.py  db.py  document_routes.py  geocode.py  log.py  logging.py  main.py  migrate.py  node_routes.py  operation_routes.py  passwords.py  rate_limit.py  seed_demo.py  (+4 more)
backend/tests/: conftest.py  test_auth_routes.py  test_columns.py  test_confirm_endpoint.py  test_cookie_attrs.py  test_create_node.py  test_csv_parser.py  test_cuit.py  test_diff_payloads.py  test_document_routes.py  test_extract_caps.py  test_file_endpoint.py  test_geocode.py  test_health.py  test_list_documents.py  test_list_operations_endpoint.py  test_llm_client.py  test_llm_factory.py  test_llm_fixtures.py  test_llm_response.py  test_map_endpoint.py  test_node_routes.py  test_operation_detail_endpoint.py  test_operation_routes.py  test_operations_schema.py  test_orchestrator.py  test_orchestrator_llm.py  test_parse_attempt_constraints.py  test_parsing_schema.py  test_passwords.py  test_preprocess.py  test_prompt.py  test_rate_limit.py  test_review_endpoint.py  test_seed_demo.py  test_sessions.py  test_signup.py  test_storage.py  test_storage_async_offload.py  test_stub_llm.py  (+3 more)
(+128 files in other folders)
