[project]
name = "trama"
version = "0.1.0"
description = "trama backend — agroecological document ingestion."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
